--- a/visual_relation/requirements.txt
+++ b/visual_relation/requirements.txt
@@ -1,6 +1,6 @@
-numpy>=1.16.0
-pandas>=0.24.0,<0.25.0
-torchvision==0.6.0
-Pillow==6.2.0
-tensorboardX==1.8
+numpy>=1.19.5
+pandas>=1.4.4
+torchvision>=0.18.0
+Pillow>=10.3.0
+tensorboardX>=2.6.2.2
 svn
